appId: com.denis.habitlab
---
# Start state: Experiment Editor entered from Experiment Details.
- assertVisible:
    id: habitlab.experiment-editor.screen.root
- tapOn:
    id: habitlab.experiment-editor.action.back
- extendedWaitUntil:
    visible:
      id: habitlab.experiment-details.screen.root
    timeout: 10000
- assertVisible:
    id: habitlab.experiment-details.screen.root
